# tvm_example

example_01/: README.md  build.sh
example_01/python/: rpc_deploy.py
example_02/: CMakeLists.txt  README.md  build.sh  main.cc  mobilenet.cc
example_02/python/: model_build.py
example_03/: README.md  model-01-NCHW-B1-opencl-C1000-T21-08-30-20-05.json  model-01-NCHW-B1-opencl-C1000-T21-09-01-10-08.json  model-01-NCHW-B1-opencl-C1000-T21-09-01-17-31.json  model-01-NCHW-B1-opencl-C1000-T21-09-01-18-25.json  model-01-NCHW-B1-opencl-C200-T21-08-30-18-04.json  model-01-NCHW-B1-opencl-C2000-T21-08-29-15-57.json  model-01-NCHW-B1-opencl-C2000-T21-08-29-21-56.json  model-01-NCHW-B1-opencl-C2000-T21-08-30-08-13.json  model-01-NCHW-B1-opencl-C2000-T21-08-30-10-07.json  model-01-half-NCHW-B1-opencl-C2000-T21-09-01-22-21.json  model-01-half-NCHW-B1-opencl-C2000-T21-09-02-08-08.json  model-01-half-NCHW-B1-opencl-C2000-T21-09-02-12-02.json  model-01-half-NCHW-B1-opencl-C2000-T21-09-02-12-19.json  model-01-half-NCHW-B1-opencl.json
example_03/python/: tune_schedule.py
example_04/: README.md  build.sh
example_04/auto_tvm_log/: v9h-mnist-NCHW-x86_64-C1000-T21-08-25-07-41.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-30-23-05.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-30-23-07.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-08-21.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-08-33.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-08-45.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-09-40.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-11-31.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-08-31-16-07.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-09-01-08-02.log.tmp  v9h-model-01-NCHW-opencl-C1000-T21-09-01-10-09.log.tmp  v9h-model-01-NCHW-opencl-C500-T21-09-01-17-32.log.tmp  v9h-model-01-NCHW-opencl-C500-T21-09-01-18-30.log.tmp  v9h-model-01-NCHW-opencl-C500-T21-09-01-19-46.log.tmp  v9h-model-01-NCHW-opencl-C500-T21-09-01-22-28.log.tmp
example_04/op9_dla/: op9_dla_int8.tflite
(+16 files in other folders)
